--- a/application/login.html
+++ b/application/login.html
@@ -5,7 +5,7 @@
 	<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-	<script src="http://localhost:8090/js/app.js"></script> 
+	<script src="/js/app.js"></script> 
 <style>
 .my-form {
 transition: all linear 0.5s;
