--- a/application/assets/js/succ.html
+++ b/application/assets/js/succ.html
@@ -5,7 +5,7 @@
 	<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-	<script src="/js/app.js"></script>
+	<script src="http://localhost:8090/Meanstack-app/application/js/app.js"></script>
 </head>
 <body ng-app="hello" ng-controller="app2Ctrl">
 	<p>Welcome user</p>
