--- a/application/login.html
+++ b/application/login.html
@@ -1,10 +1,10 @@
 <html >
 <head>
 	<title>Angular</title>
-	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.8/angular.min.js"></script>
-	<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-    <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+	<script src="http://localhost:8090/Meanstack-app/application/angular.min.js"></script>
+	<link src="http://localhost:8090/Meanstack-app/application/bootstrap.min.css">
+    <script src="http://localhost:8090/Meanstack-app/application/jquery.min.js"></script>
+    <!--<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>-->
 	<script src="http://localhost:8090/Meanstack-app/application/js/app.js"></script> 
 <style>
 .my-form {
