--- a/application/assets/js/succ.html
+++ b/application/assets/js/succ.html
@@ -2,11 +2,11 @@
 <html>
 <head>
 	<title>Nodejs</title>
-	<script src="http://localhost:8090/Meanstack-app/application/angular.min.js"></script>
-	<link src="http://localhost:8090/Meanstack-app/application/bootstrap.min.css">
-    <script src="http://localhost:8090/Meanstack-app/application/jquery.min.js"></script>
+	<script src="https://localhost:8090/Meanstack-app/application/angular.min.js"></script>
+	<link src="https://localhost:8090/Meanstack-app/application/bootstrap.min.css">
+    <script src="https://localhost:8090/Meanstack-app/application/jquery.min.js"></script>
     <!--<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>-->
-	<script src="http://localhost:8090/Meanstack-app/application/js/app.js"></script>
+	<script src="https://localhost:8090/Meanstack-app/application/js/app.js"></script>
 </head>
 <body ng-app="hello" ng-controller="app2Ctrl">
 	<p>Welcome user</p>
